# Omni-Sense

./: .env.example  .env.production  .env.production.example  .gitignore  AUDIT_REPORT_FINAL.md  CSVtoWAV.py  Caddyfile  DEFENSE_STRATEGY.md  DEPLOYMENT.md  EVALUATION_OVERVIEW.md  HETZNER_WALKTHROUGH.md  INDUSTRIAL_VALIDATION.md  MASTERPLAN.md  Makefile  Phase1.md  Phase2.md  Phase3.md  Phase4.md  README.md  check_mlflow.py  docker-compose.ghcr.yml  docker-compose.prod.yml  docker-compose.yml  docker-compose.yml.bak  iep2_logs.txt  kimi_briefing.md  omni-sense-architecture.html  omni-sense-explorer.html  omni-sense-vision.html  progress.md  pyproject.toml  pytest.ini  render.yaml  resample_to_3200.py  ruff.toml  seismic_augmentation.py  temp_health.txt  test_eep_wav.py  test_iep2.py  test_public_url.py  (+1 more)
DESIGNS/: Omni-Sense Console.html  Omni-Sense Production.html  screen-breakai.jsx  screen-diagnose.jsx  screen-diagnosis.jsx  screen-field.jsx  screen-mlops.jsx  screen-ops.jsx  screen-sensor.jsx  screen-tdoa.jsx  shared.jsx  styles-light.css  styles.css
Processed_audio_16k/: xgboost_training_manifest.json
certs/: ca.crt  ca.key  ca.srl  gateway.crt  gateway.key  server.crt  server.csr  server.key  server_ext.cnf
coordination/: PROGRESS.md  decisions.md
dashboard/: app.js  index.html  styles.css
demo/: FEATURES.md  README.md  app.py  requirements.txt
docs/: 12FACTOR.md  BUSINESS_MODEL.md  COMPETITIVE_LANDSCAPE.md  FEATURE_STORE.md  LIMITATIONS.md  MLOPS_VALIDATION.md  PRODUCTION_ARCHITECTURE.md  PROJECT_READINESS.md
eep/: Dockerfile  requirements.txt
hardware/: README.md
iep1/: Dockerfile  requirements.txt
iep2/: Dockerfile  requirements.txt
iep3/: Dockerfile  requirements.txt
iep4/: Dockerfile  requirements.txt
live-api/: Dockerfile  db.py  (+3 more)
(+285 files in other folders)
