[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "omni-sense"
version = "0.1.0"
description = "Out-of-Distribution Aware Acoustic Diagnostics Platform for Urban Infrastructure"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Omni-Sense Team"},
]

[project.optional-dependencies]
# Core ML pipeline (for training scripts)
ml = [
    "tensorflow>=2.15,<2.17",
    "tensorflow-hub>=0.16",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "skl2onnx>=1.16",
    "onnxruntime>=1.17",
    "librosa>=0.10",
    "soundfile>=0.12",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "mlflow>=2.10",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

# EEP service
eep = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=7.0",
    "soundfile>=0.12",
    "numpy>=1.26",
]

# IEP2 service
iep2 = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "onnxruntime>=1.17",
    "numpy>=1.26",
    "pydantic>=2.6",
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=7.0",
]

# Development
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.3",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["eep/tests", "iep2/tests", "tests"]
asyncio_mode = "auto"
